# robo-cortex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EVALUATION.md  EXPORT_IMPORT.md  LICENSE  MCP_TOOLS.md  PYTHON_SDK.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  schema.sql  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmark-results-20260718/: a1-recmeter.json  a2-recmeter.json  a3-recmeter.json  aggregate.md
benchmark-results-20260718/runs/a1-assisted-1/: result.json
benchmark-results-20260718/runs/a1-assisted-2/: fix.diff  result.json
benchmark-results-20260718/runs/a1-assisted-3/: fix.diff  result.json
benchmark-results-20260718/runs/a1-assisted-4/: result.json
benchmark-results-20260718/runs/a1-assisted-5/: fix.diff  prompt.txt  result.json
benchmark-results-20260718/runs/a1-baseline-1/: prompt.txt  result.json
benchmark-results-20260718/runs/a1-baseline-2/: result.json
benchmark-results-20260718/runs/a1-baseline-3/: result.json
benchmark-results-20260718/runs/a1-baseline-4/: result.json
benchmark-results-20260718/runs/a1-baseline-5/: result.json
benchmark-results-20260718/runs/a2-assisted-1/: fix.diff  result.json
benchmark-results-20260718/runs/a2-assisted-2/: fix.diff  result.json
benchmark-results-20260718/runs/a2-assisted-3/: fix.diff  prompt.txt  result.json
docs/: benchmark-results.md  ci-example.yml
mcpb/: manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/benchmark/: aggregate.py  run.py
scripts/git-hooks/: pre-push
src/robo_cortex/: __init__.py  gitea.py  mcp_server.py  sdk.py
tests/: conftest.py  fixtures.py  test_add_path.py  test_affected.py  test_assumptions.py  test_cli_affected.py  test_cli_init.py  test_cli_lifecycle.py  test_cli_record.py  test_cli_retrieve.py  test_cli_scope_b.py  test_completion.py  test_curation.py  test_db.py  test_evidence.py  test_gitea.py  test_hooks.py  test_init.py  test_invalidate.py  test_lifecycle.py  test_mcp_contracts.py  test_mcp_stdio.py  test_memory.py  test_output.py  test_record_batch.py  test_retrieve.py  test_reverify.py  test_scope_b.py  test_sdk.py  test_search.py  test_semantic.py  test_smoke.py  test_transfer.py  test_update_path.py
(+81 files in other folders)
